# Agentic-AI-Powered-DevSecOps-Framework

./: .gitignore  README.md  SECURITY_FIXES.md  pyproject.toml  requirements.txt  run_dashboard.py  sonar-project.properties  test_database.py  test_remediation_agent.py  test_sast_agent.py  test_sca_agent.py  test_sonarcloud.py  test_with_idoft.py
.github/workflows/: devsecops.yml  evaluation.yml  thesis-evaluation.yml
agents/: __init__.py
agents/dast_agent/: __init__.py  agent.py  tools.py
agents/flaky_test_agent/: __init__.py  agent.py  tools.py
agents/gnn_agent/: __init__.py  agent.py  tools.py
agents/iast_agent/: __init__.py  agent.py  tools.py
agents/orchestrator/: __init__.py  agent.py
agents/remediation_agent/: README.md  __init__.py  agent.py  tools.py
agents/sast_agent/: __init__.py  agent.py  tools.py
agents/sast_agent/.adk/: session.db
agents/sca_agent/: __init__.py  agent.py  tools.py
config/: .env.example
core/: __init__.py  database.py  github_client.py  message_bus.py  orchestrator.py  vector_store.py  vulnerability.py
dashboard/: __init__.py  app.py
dashboard/templates/: index.html
evaluation/: __init__.py  datasets.py  metrics.py  runner.py
evaluation/results/: thesis_evaluation_report.json
evaluation/results/thesis-evaluation-report/: security_evaluation_dvwa.json  semgrep-results.json  semgrep_dvwa.json  thesis_evaluation_report.json
